# Atelaxia

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  README.md  make.bat  version.txt
assets/: pallette.xcf
data-pack/: pack.mcmeta
docs/: conf.py  credits.rst  index.rst
docs/_static/: footer.css
docs/_templates/: layout.html
docs/contributing/: dev-cycle.rst  git.rst  index.rst  managers.rst
docs/contributing/styles/: index.rst  mcfunction.rst  python.rst
docs/lore/: index.rst
docs/lore/history/: creation.rst  index.rst
docs/scripts/: index.rst  mcfpp.rst  packager.rst  unihex.rst
docs/source/: conf.py  index.rst
maps/world/: bluemap.id  level.dat_old
maps/world/advancements/: 0cbfa6de-74df-4cf5-a5ec-905df1dd0627.json  154a0824-e443-4e69-a036-b12d7bd08577.json
maps/world/entities/: r.-1.-1.mca  r.-1.-2.mca  r.-1.-3.mca  r.-1.0.mca  r.-1.1.mca  r.-1.169.mca  r.-1.2.mca  r.-2.-1.mca  r.-2.0.mca  r.-3.-1.mca  r.-3.0.mca  r.0.-1.mca  r.0.-2.mca  r.0.-3.mca  r.0.0.mca  r.0.1.mca  r.0.2.mca  r.0.3.mca  r.1.0.mca
maps/world/playerdata/: 0cbfa6de-74df-4cf5-a5ec-905df1dd0627.dat_old  154a0824-e443-4e69-a036-b12d7bd08577.dat_old
maps/world/poi/: r.-1.-1.mca  r.-1.0.mca  r.-1.1.mca  r.-2.-1.mca  r.0.-1.mca  r.0.0.mca  r.0.1.mca  r.1.0.mca
maps/world/region/: r.-1.-2.mca  r.-1.-4.mca  r.-1.-5.mca  r.-1.-7.mca  (+323 more)
repo-scripts/: packager.sh  test_module.mcfunction  test_module.mcpy  test_module.py  unihex.py
repo-scripts/mcfpp/: __init__.py  __main__.py  pycompile.py  version.py
resource-pack/: pack.mcmeta
server/: server.properties
(+64 files in other folders)
