project(special-train)

# Option for adding debugging. Options are NONE, ERRORS, WARNINGS, INFOS.
option(DEBUG_LEVEL "Amount of debugging information to display when running a function." "WARNINGS")

# Whether to include documentation.
option(INCLUDE_DOCS "Whether documentation should be brought along with the build." 0)

